// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Datepickers AboutDatepickers renders 1`] = `
Array [
  <h2
    id="about-datepickers"
  >
    About
  </h2>,
  <p>
    Datepickers give a visual presentation of days, months and years. By utilizing the datepicker you can be assured the given input is in the format you expect without having to deal with too much client-side validation. Datepickers should be used for recent dates to avoid having the user click a lot of times to find the required date. If you need a date of birth or something similarly far back, an input field with proper validation will be easier to use.
  </p>,
]
`;

exports[`Documentation: Datepickers AllowInput renders 1`] = `
Array [
  <h2
    id="allow-input"
  >
    Allow input
  </h2>,
  <p>
    By default datepickers do not allow input but you can use
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-allowinput
    </code>
    . When you allow input then the given date has to match the datepicker format (
    <code
      className="code-tags code-tags-secondary"
    >
      iso8601
    </code>
     if you have not specified a format).
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="simple-datepicker"
      >
        Date
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={true}
          data-datepicker-format={null}
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value={null}
          data-required={null}
          id="simple-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="simple-datepicker"&gt;Date&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="simple-datepicker" class="form-control" type="text" data-datepicker data-datepicker-allowinput="true" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers CustomFormat renders 1`] = `
Array [
  <h2
    id="custom-format"
  >
    Custom format
  </h2>,
  <p>
    To use a custom format include
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-format="[nb|sv|da|fi|en|iso8601(default)]"
    </code>
    . If no format is provided then datepicker will default to
     
    <code
      className="code-tags code-tags-secondary"
    >
      iso8601
    </code>
    . Same behaviour applies if you try to set an invalid date.
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="nb-datepicker"
      >
        nb (norwegian):
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="nb"
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="28.12.1972"
          data-required={null}
          id="nb-datepicker"
          type="text"
        />
        

      </div>
    </div>
    <div
      className="form-group"
    >
      

      <label
        htmlFor="sv-datepicker"
      >
        sv (swedish):
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="sv"
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="1972-12-28"
          data-required={null}
          id="sv-datepicker"
          type="text"
        />
        

      </div>
    </div>
    <div
      className="form-group"
    >
      

      <label
        htmlFor="da-datepicker"
      >
        da (danish):
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="da"
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="28.12.1972"
          data-required={null}
          id="da-datepicker"
          type="text"
        />
        

      </div>
    </div>
    <div
      className="form-group"
    >
      

      <label
        htmlFor="fi-datepicker"
      >
        fi (finnish):
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="fi"
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="28.12.1972"
          data-required={null}
          id="fi-datepicker"
          type="text"
        />
        

      </div>
    </div>
    <div
      className="form-group"
    >
      

      <label
        htmlFor="en-datepicker"
      >
        en (english):
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="en"
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="28/12/1972"
          data-required={null}
          id="en-datepicker"
          type="text"
        />
        

      </div>
    </div>
    <div
      className="form-group"
    >
      

      <label
        htmlFor="iso8601-datepicker"
      >
        iso8601 (robotic):
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="iso8601"
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="1972-12-28"
          data-required={null}
          id="iso8601-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

                8
                

                9
                

                10
                

                11
                

                12
                

                13
                

                14
                

                15
                

                16
                

                17
                

                18
                

                19
                

                20
                

                21
                

                22
                

                23
                

                24
                

                25
                

                26
                

                27
                

                28
                

                29
                

                30
                

                31
                

                32
                

                33
                

                34
                

                35
                

                36
                

                37
                

                38
                

                39
                

                40
                

                41
                

                42
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="nb-datepicker"&gt;nb (norwegian):&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="nb-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="nb" data-datepicker-value="28.12.1972" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

                &lt;div class="form-group"&gt;
                

                    &lt;label for="sv-datepicker"&gt;sv (swedish):&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="sv-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="sv" data-datepicker-value="1972-12-28" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

                &lt;div class="form-group"&gt;
                

                    &lt;label for="da-datepicker"&gt;da (danish):&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="da-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="da" data-datepicker-value="28.12.1972" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

                &lt;div class="form-group"&gt;
                

                    &lt;label for="fi-datepicker"&gt;fi (finnish):&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="fi-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="fi" data-datepicker-value="28.12.1972" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

                &lt;div class="form-group"&gt;
                

                    &lt;label for="en-datepicker"&gt;en (english):&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="en-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="en" data-datepicker-value="28/12/1972" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

                &lt;div class="form-group"&gt;
                

                    &lt;label for="iso8601-datepicker"&gt;iso8601 (robotic):&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="iso8601-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="iso8601" data-datepicker-value="1972-12-28" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers DateRange renders 1`] = `
Array [
  <h2
    id="date-range"
  >
    Date range
  </h2>,
  <p>
    You can make it possible to select a range of dates with
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-mode="range"
    </code>
    .
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="date-range-datepicker"
      >
        date
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="nb"
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min="10.12.1972"
          data-datepicker-mode="range"
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value={null}
          data-required={null}
          id="date-range-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="date-range-datepicker"&gt;date&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="date-range-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="nb" data-datepicker-min="10.12.1972" data-datepicker-mode="range" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers HumanReadable renders 1`] = `
Array [
  <h2
    id="human-readable"
  >
    Human readable date
  </h2>,
  <p>
    If you wish to make the date more readable to humans you can add
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-fulldate="true"
    </code>
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="init-value-datepicker"
      >
        Date
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format={null}
          data-datepicker-fulldate={true}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="1972-12-28"
          data-required={null}
          id="init-value-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="init-value-datepicker"&gt;Date&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="init-value-datepicker" class="form-control" type="text" data-datepicker data-datepicker-value="1972-12-28" data-datepicker-fulldate="true" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers IncludeTime renders 1`] = `
Array [
  <h2
    id="include-time"
  >
    Include time
  </h2>,
  <p>
    Adding time to your datepicker is as easy as using
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-time="true" 
    </code>
    . If you wish to set a default time for the time picker just include it in the
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-value
    </code>
     attribute.
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="include-time-datepicker"
      >
        Date
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="nb"
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={true}
          data-datepicker-value={null}
          data-required={null}
          id="include-time-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="include-time-datepicker"&gt;Date&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="include-time-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="nb" data-datepicker-time="true" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers InitialValue renders 1`] = `
Array [
  <h2
    id="initial-value"
  >
    Initial value
  </h2>,
  <p>
    If you want to set an initial value for your datepicker use
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-value="{your-date}"
    </code>
    .
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="init-value-datepicker"
      >
        Date
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format={null}
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="1972-12-28"
          data-required={null}
          id="init-value-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="init-value-datepicker"&gt;Date&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="init-value-datepicker" class="form-control" type="text" data-datepicker data-datepicker-value="1972-12-28" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript methods
  </h2>
  <JavascriptDocs
    close={true}
    componentName="datepicker"
    open={true}
  />
</Fragment>
`;

exports[`Documentation: Datepickers MultipleDates renders 1`] = `
<Fragment>
  <h2
    id="multiple-dates"
  >
    Multiple dates
  </h2>
  <p>
    Set 
    <CodeTags
      code="data-datepicker-mode"
      type="secondary"
    />
     to 
    <CodeTags
      code="multiple"
      type="secondary"
    />
     for multiple date selection.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Datepicker
      format="nb"
      id="date-range-datepicker"
      label="date"
      min="10.12.1972"
      mode="multiple"
      prefixType="icon"
      prefixValue="event"
    />
  </ComponentPreview>
  <Alert
    icon="warning"
    text={
      <p>
        <b>
          Max number of dates:
        </b>
         The 
        <CodeTags
          code="multiple"
          type="secondary"
        />
         variation of datepicker does not have an upper limit of dates. Use 
        <NavHashLink
          to="#date-range"
        >
          range
        </NavHashLink>
         if you want to select a continuous range of dates.
      </p>
    }
    type="warning"
  />
</Fragment>
`;

exports[`Documentation: Datepickers Options renders 1`] = `
Array [
  <h2
    id="available-options"
  >
    Available options
  </h2>,
  <p>
    Options available through
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker
    </code>
    ...
  </p>,
  " ",
  "Keep in mind that setting any of these values will render them true, so setting an attribute to ",
  <code
    className="code-tags code-tags-secondary"
  >
    false
  </code>,
  " will still render it true.",
  <table
    className="table table-striped"
  >
    <thead>
      <tr>
        <th>
          Attribute
        </th>
        <th>
          Default value
        </th>
        <th>
          Description
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-value
          </code>
        </td>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            null
          </code>
        </td>
        <td>
          Value used to initialize calendar. Set this value with the same format currently set for the datepicker (including time if you have enabled that).
        </td>
      </tr>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-allowinput
          </code>
        </td>
        <td />
        <td>
          This allows the user to write in the input field. The dates given must match the format of the datepicker.
        </td>
      </tr>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-format
          </code>
        </td>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            iso8601
          </code>
        </td>
        <td>
          <p>
            Format string used for the input field and names for days and months. All have the same time format (HH:mm), and starts the week on monday (1).
          </p>
          <p>
            The following options are available:
          </p>
          <ul
            className="list"
          >
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                nb
              </code>
              : DD.MM.YYYY
            </li>
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                sv
              </code>
              : YYYY-MM-DD
            </li>
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                da
              </code>
              : DD.MM.YYYY
            </li>
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                fi
              </code>
              : DD.MM.YYYY
            </li>
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                en
              </code>
              : DD/MM/YYYY
            </li>
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                iso8601
              </code>
              : YYYY-MM-DD (default)
            </li>
          </ul>
        </td>
      </tr>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-time
          </code>
        </td>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            false
          </code>
        </td>
        <td>
          If the calendar shows the current time and allows you to change it using a dropdown.
        </td>
      </tr>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-months
          </code>
        </td>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            1
          </code>
        </td>
        <td>
          Number of months to display in the datepicker.
        </td>
      </tr>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-min
          </code>
        </td>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            null
          </code>
        </td>
        <td>
          Disallow dates before min.
        </td>
      </tr>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-max
          </code>
        </td>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            null
          </code>
        </td>
        <td>
          Disallow dates past max.
        </td>
      </tr>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-altinput
          </code>
        </td>
        <td />
        <td>
          Use a custom format to display the selected date(s) shown in the input field.
        </td>
      </tr>
      <tr>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            data-datepicker-mode
          </code>
        </td>
        <td>
          <code
            className="code-tags code-tags-secondary"
          >
            single
          </code>
        </td>
        <td>
          Different variations of date selection. Available options are:
          <ul
            className="list"
          >
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                single
              </code>
              User can select one date
            </li>
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                multiple
              </code>
              User can select multiple dates
            </li>
            <li
              className="mb-sm"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                range
              </code>
              User can select a range of continuous dates
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`Documentation: Datepickers ShowingMultipleMonths renders 1`] = `
Array [
  <h2
    id="showing-multiple-months"
  >
    Showing multiple months
  </h2>,
  <p>
    If you need to show more than one month in your date picker use the attribute
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-months="{number}"
    </code>
    .
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="multiple-months-datepicker"
      >
        Date
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format={null}
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months="2"
          data-datepicker-time={null}
          data-datepicker-value={null}
          data-required={null}
          id="multiple-months-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="multiple-months-datepicker"&gt;Date&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="multiple-months-datepicker" class="form-control" type="text" data-datepicker data-datepicker-months="2" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers SimpleDatepicker renders 1`] = `
Array [
  <h2
    id="simple-datepicker"
  >
    Simple datepicker
  </h2>,
  <p>
    A basic datepicker can be made by applying the attribute
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker
    </code>
     to an input element inside a 
    <code
      className="code-tags code-tags-secondary"
    >
      .form-group
    </code>
    . The basic datepicker has a read-only input field.
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="simple-datepicker"
      >
        Date
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format={null}
          data-datepicker-fulldate={null}
          data-datepicker-max={null}
          data-datepicker-min={null}
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value={null}
          data-required={null}
          id="simple-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="simple-datepicker"&gt;Date&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="simple-datepicker" class="form-control" type="text" data-datepicker /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers ValidDates renders 1`] = `
Array [
  <h2
    id="valid-dates"
  >
    Valid dates
  </h2>,
  <p>
    You can set a range of available dates to select from by using
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-min
    </code>
     and
     
    <code
      className="code-tags code-tags-secondary"
    >
      data-datepicker-max
    </code>
    .
  </p>,
  <div
    className="showcase-panel"
  >
    <div
      className="form-group"
    >
      

      <label
        htmlFor="valid-dates-datepicker"
      >
        Date
      </label>
      

      <div
        className="input-group"
      >
        

        <span
          className="input-group-addon "
        >
          <i
            aria-hidden="true"
            className="material-icons material-icons-outlined"
          >
            event
          </i>
        </span>
        

        <input
          className="form-control"
          data-datepicker=""
          data-datepicker-allowinput={null}
          data-datepicker-format="nb"
          data-datepicker-fulldate={null}
          data-datepicker-max="10.05.2017"
          data-datepicker-min="28.12.1972"
          data-datepicker-mode={null}
          data-datepicker-months={null}
          data-datepicker-time={null}
          data-datepicker-value="28.12.1972"
          data-required={null}
          id="valid-dates-datepicker"
          type="text"
        />
        

      </div>
    </div>
  </div>,
  <figure>
    <div
      className="code-view"
    >
      <header
        className="code-view-header"
      >
        HTML
        <button
          aria-describedby="tooltipCopy"
          className="tooltip"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="at-clipboard small"
          />
          <div
            id="tooltipCopy"
            role="tooltip"
          >
            Copy to clipboard
          </div>
        </button>
      </header>
      <table
        className="code-view-table"
      >
        <tbody>
          <tr>
            <td
              className="code-view-numbers"
            >
              <pre>
                1
                

                2
                

                3
                

                4
                

                5
                

                6
                

                7
                

              </pre>
            </td>
            <td
              className="code-view-code"
            >
              <pre>
                &lt;div class="form-group"&gt;
                

                    &lt;label for="valid-dates-datepicker"&gt;Date&lt;/label&gt;
                

                    &lt;div class="input-group"&gt;
                

                        &lt;span class="input-group-addon "&gt;&lt;i class="material-icons material-icons-outlined" aria-hidden="true"&gt;event&lt;/i&gt;&lt;/span&gt;
                

                        &lt;input id="valid-dates-datepicker" class="form-control" type="text" data-datepicker data-datepicker-format="nb" data-datepicker-min="28.12.1972" data-datepicker-max="10.05.2017" data-datepicker-value="28.12.1972" /&gt;
                

                    &lt;/div&gt;
                

                &lt;/div&gt;
                

              </pre>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </figure>,
]
`;

exports[`Documentation: Datepickers renders 1`] = `
<DocContainer>
  <p
    className="lead"
  >
    Datepickers makes it easy to get dates from your users. With datepickers you do not have to worry about how your users write the given date, alleviating the need to do format validation.
  </p>
  <AboutDatepickers />
  <SimpleDatepicker />
  <AllowInput />
  <HumanReadable />
  <InitialValue />
  <CustomFormat />
  <IncludeTime />
  <ShowingMultipleMonths />
  <ValidDates />
  <DateRange />
  <MultipleDates />
  <Options />
  <JavascriptMethods />
  <NpmInformation
    componentName="datepicker"
  />
</DocContainer>
`;
